<resources>
    <string name="app_name">ATM Consultoria</string>
    <string name="empresaDetalhes">Sobre a empresa</string>
    <string name="servicos_titulo">Serviços</string>
    <string name="texto_consultoria">Consultoria</string>
    <string name="texto_processos">Processos</string>
    <string name="texto_acompanhamento_processos">Acompanhamento e processos</string>
    <string name="titulo_clientes">Nossos Clientes</string>
    <string name="texto_clientes_sys">Empresa de desenvolvimento de sistemas</string>
    <string name="texto_clientes_rsm" >Empresa de auditoria</string>
    <string name="titulo_contato">Contato</string>
    <string name="email_consultoria">E-MAIL: consultoria@atm.com.br</string>
    <string name="telefone_contato">Telefone: (11) 3333-2222</string>
    <string name="celular_contato">Celular: (11) 9999-8888</string>
</resources>